--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     <p id="topSectionForAddingElementToList">
       <label for="new-task">Add Item</label>
       <div class="task-row-wrapper">
-        <input id="new-task"class="task" type="text"><button>Add</button>    
+        <input id="new-task"class="task" type="text">
+        <button>Add</button>    
       </div>
     </p>
     <h3>Todo</h3>
@@ -23,14 +24,19 @@
         <label class="task">Pay Bills</label>
         <input type="text" class="task">
         <button class="edit">Edit</button>
-        <button class="delete"><img src="./remove.svg"></button>
+        <button class="delete">
+          <img src="./remove.svg">
+        </button>
       </li>
       <li class="editMode">
         <input type="checkbox">
         <label class="task">Go Shopping</label>
         <input type="text" value="Go Shopping" class="task">
         <button class="edit">Save</button>
-        <button class="delete"><img src="./remove.svg"></button></li>
+        <button class="delete">
+          <img src="./remove.svg">
+        </button>
+      </li>
     </ul>
     <h3>Completed</h3>
     <ul id="completed-tasks">
@@ -39,7 +45,9 @@
         <label class="task">See the Doctor</label>
         <input type="text" class="task">
         <button class="edit">Edit</button>
-        <button class="delete"><img src="./remove.svg"></button>
+        <button class="delete">
+          <img src="./remove.svg">
+        </button>
       </li>
     </ul>
   </div>
