--- a/index.html
+++ b/index.html
@@ -5,19 +5,19 @@
   <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
 </head>
 <body>
-  <div class="aaa">
+  <div class="matrix-info">
     <img
       src="./eisenhower-matrix.jpg"
     >
     <a
-      class="more_inf"
+      class="matrix-info__link"
       href="https://goal-life.com/page/method/matrix-eisenhower"
     >Want more details?</a>
   </div>
-  <div class="centered-main-page-element">
-    <p id="topSectionForAddingElementToList">
+  <div class="main">
+    <p id="section__new-task">
       <label for="new-task">Add Item</label>
-      <div class="task-row-wrapper">
+      <div class="new-task__wrapper">
         <input
           id="new-task"
           class="task"
@@ -27,7 +27,7 @@
       </div>
     </p>
     <h3>Todo</h3>
-    <ul id="incompleteTasks">
+    <ul id="section__incompleted-tasks">
       <li>
         <input type="checkbox">
         <label class="task">Pay Bills</label>
@@ -39,7 +39,7 @@
           >
         </button>
       </li>
-      <li class="editMode">
+      <li class="task_edit-mode">
         <input type="checkbox">
         <label class="task">Go Shopping</label>
         <input
@@ -56,7 +56,7 @@
       </li>
     </ul>
     <h3>Completed</h3>
-    <ul id="completed-tasks">
+    <ul id="section__completed-tasks">
       <li>
         <input type="checkbox" checked>
         <label class="task">See the Doctor</label>
