--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
   <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet">
   <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
 </head>
-<body>
+<body class="page">
   <div class="matrix-info">
     <img
+      class="matrix-info__image"
       src="./eisenhower-matrix.jpg"
     >
     <a
@@ -16,54 +17,57 @@
   </div>
   <div class="main">
     <p id="section__new-task">
-      <label for="new-task">Add Item</label>
+      <label class="section__title section__title_new" for="new-task">Add Item</label>
       <div class="new-task__wrapper">
         <input
           id="new-task"
-          class="task"
+          class="task__input task__input_new task"
           type="text"
         >
-        <button>Add</button>    
+        <button class="task-btn">Add</button>    
       </div>
     </p>
-    <h3>Todo</h3>
+    <h3 class="section__title">Todo</h3>
     <ul id="section__incompleted-tasks">
-      <li>
-        <input type="checkbox">
-        <label class="task">Pay Bills</label>
-        <input type="text" class="task">
-        <button class="edit">Edit</button>
-        <button class="delete">
+      <li class="task-list__item">
+        <input class="task__checkbox" type="checkbox">
+        <label class="task__name task">Pay Bills</label>
+        <input type="text" class="task__input task">
+        <button class="task-btn edit">Edit</button>
+        <button class="task-btn delete">
           <img
+            class="task__delete-img"
             src="./remove.svg"
           >
         </button>
       </li>
-      <li class="task_edit-mode">
-        <input type="checkbox">
-        <label class="task">Go Shopping</label>
+      <li class="task-list__item task_edit-mode">
+        <input class="task__checkbox" type="checkbox">
+        <label class="task__name task">Go Shopping</label>
         <input
           type="text"
           value="Go Shopping"
-          class="task"
+          class="task__input task"
         >
-        <button class="edit">Save</button>
-        <button class="delete">
+        <button class="task-btn edit">Save</button>
+        <button class="task-btn delete">
           <img
+            class="task__delete-img"
             src="./remove.svg"
           >
         </button>
       </li>
     </ul>
-    <h3>Completed</h3>
-    <ul id="section__completed-tasks">
-      <li>
-        <input type="checkbox" checked>
-        <label class="task">See the Doctor</label>
-        <input type="text" class="task">
-        <button class="edit">Edit</button>
-        <button class="delete">
+    <h3 class="section__title">Completed</h3>
+    <ul class="section__completed-tasks">
+      <li class="task-list__item">
+        <input class="task__checkbox" type="checkbox" checked>
+        <label class="task__name task">See the Doctor</label>
+        <input type="text" class="task__input task">
+        <button class="task-btn edit">Edit</button>
+        <button class="task-btn delete">
           <img
+            class="task__delete-img"
             src="./remove.svg"
           >
         </button>
