--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
 </head>
 <body class="page">
-  <div class="matrix-info">
+  <header class="matrix-info">
     <img
       class="matrix-info__image"
       src="./eisenhower-matrix.jpg"
@@ -14,10 +14,10 @@
       class="matrix-info__link"
       href="https://goal-life.com/page/method/matrix-eisenhower"
     >Want more details?</a>
-  </div>
-  <div class="main">
-    <p id="section__new-task">
-      <label class="section__title section__title_new" for="new-task">Add Item</label>
+  </header>
+  <main class="main">
+    <section id="section__new-task">
+      <h3 class="section__title section__title_new">Add Item</h3>
       <div class="new-task__wrapper">
         <input
           id="new-task"
@@ -26,54 +26,58 @@
         >
         <button class="task-btn">Add</button>    
       </div>
-    </p>
-    <h3 class="section__title">Todo</h3>
-    <ul id="section__incompleted-tasks">
-      <li class="task-list__item">
-        <input class="task__checkbox" type="checkbox">
-        <label class="task__name task">Pay Bills</label>
-        <input type="text" class="task__input task">
-        <button class="task-btn edit">Edit</button>
-        <button class="task-btn delete">
-          <img
-            class="task__delete-img"
-            src="./remove.svg"
+    </section>
+    <section class="section__incompleted-tasks">
+      <h3 class="section__title">Todo</h3>
+      <ul id="incompleted-tasks__list">
+        <li class="task-list__item">
+          <input class="task__checkbox" type="checkbox">
+          <label class="task__name task">Pay Bills</label>
+          <input type="text" class="task__input task">
+          <button class="task-btn edit">Edit</button>
+          <button class="task-btn delete">
+            <img
+              class="task__delete-img"
+              src="./remove.svg"
+            >
+          </button>
+        </li>
+        <li class="task-list__item task_edit-mode">
+          <input class="task__checkbox" type="checkbox">
+          <label class="task__name task">Go Shopping</label>
+          <input
+            type="text"
+            value="Go Shopping"
+            class="task__input task"
           >
-        </button>
-      </li>
-      <li class="task-list__item task_edit-mode">
-        <input class="task__checkbox" type="checkbox">
-        <label class="task__name task">Go Shopping</label>
-        <input
-          type="text"
-          value="Go Shopping"
-          class="task__input task"
-        >
-        <button class="task-btn edit">Save</button>
-        <button class="task-btn delete">
-          <img
-            class="task__delete-img"
-            src="./remove.svg"
-          >
-        </button>
-      </li>
-    </ul>
-    <h3 class="section__title">Completed</h3>
-    <ul class="section__completed-tasks">
-      <li class="task-list__item">
-        <input class="task__checkbox" type="checkbox" checked>
-        <label class="task__name task">See the Doctor</label>
-        <input type="text" class="task__input task">
-        <button class="task-btn edit">Edit</button>
-        <button class="task-btn delete">
-          <img
-            class="task__delete-img"
-            src="./remove.svg"
-          >
-        </button>
-      </li>
-    </ul>
-  </div>
+          <button class="task-btn edit">Save</button>
+          <button class="task-btn delete">
+            <img
+              class="task__delete-img"
+              src="./remove.svg"
+            >
+          </button>
+        </li>
+      </ul>
+    </section>
+    <section class="section__completed-tasks">
+      <h3 class="section__title">Completed</h3>
+      <ul class="completed-tasks__list">
+        <li class="task-list__item">
+          <input class="task__checkbox" type="checkbox" checked>
+          <label class="task__name task">See the Doctor</label>
+          <input type="text" class="task__input task">
+          <button class="task-btn edit">Edit</button>
+          <button class="task-btn delete">
+            <img
+              class="task__delete-img"
+              src="./remove.svg"
+            >
+          </button>
+        </li>
+      </ul>
+    </section>
+  </main>
   <script src="app.js"></script>
 </body>
 </html>
