--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <img
       class="matrix-info__image"
       src="./eisenhower-matrix.jpg"
+      alt="Eisenhower matrix image"
     >
     <a
       class="matrix-info__link"
@@ -39,6 +40,7 @@
             <img
               class="task__delete-img"
               src="./remove.svg"
+              alt="Delete task icon"
             >
           </button>
         </li>
@@ -55,6 +57,7 @@
             <img
               class="task__delete-img"
               src="./remove.svg"
+              alt="Delete task icon"
             >
           </button>
         </li>
@@ -72,6 +75,7 @@
             <img
               class="task__delete-img"
               src="./remove.svg"
+              alt="Delete task icon"
             >
           </button>
         </li>
