--- a/index.html
+++ b/index.html
@@ -17,26 +17,22 @@
     >Want more details?</a>
   </header>
   <main class="main">
-    <section id="section__new-task">
+    <section class="section__new-task">
       <h3 class="section__title section__title_new">Add Item</h3>
       <div class="new-task__wrapper">
-        <input
-          id="new-task"
-          class="task__input task__input_new task"
-          type="text"
-        >
-        <button class="task-btn">Add</button>    
+        <input class="task__input task__input_new" type="text">
+        <button class="task__btn">Add</button>    
       </div>
     </section>
     <section class="section__incompleted-tasks">
       <h3 class="section__title">Todo</h3>
-      <ul id="incompleted-tasks__list">
-        <li class="task-list__item">
+      <ul class="incompleted-tasks__list">
+        <li class="task">
           <input class="task__checkbox" type="checkbox">
-          <label class="task__name task">Pay Bills</label>
-          <input type="text" class="task__input task">
-          <button class="task-btn edit">Edit</button>
-          <button class="task-btn delete">
+          <label class="task__name">Pay Bills</label>
+          <input class="task__input" type="text">
+          <button class="task__btn task__btn_edit">Edit</button>
+          <button class="task__btn task__btn_delete">
             <img
               class="task__delete-img"
               src="./remove.svg"
@@ -44,16 +40,16 @@
             >
           </button>
         </li>
-        <li class="task-list__item task_edit-mode">
+        <li class="task task_mode_edit">
           <input class="task__checkbox" type="checkbox">
-          <label class="task__name task">Go Shopping</label>
+          <label class="task__name">Go Shopping</label>
           <input
             type="text"
             value="Go Shopping"
-            class="task__input task"
+            class="task__input"
           >
-          <button class="task-btn edit">Save</button>
-          <button class="task-btn delete">
+          <button class="task__btn task__btn_edit">Save</button>
+          <button class="task__btn task__btn_delete">
             <img
               class="task__delete-img"
               src="./remove.svg"
@@ -66,12 +62,12 @@
     <section class="section__completed-tasks">
       <h3 class="section__title">Completed</h3>
       <ul class="completed-tasks__list">
-        <li class="task-list__item">
+        <li class="task">
           <input class="task__checkbox" type="checkbox" checked>
-          <label class="task__name task">See the Doctor</label>
-          <input type="text" class="task__input task">
-          <button class="task-btn edit">Edit</button>
-          <button class="task-btn delete">
+          <label class="task__name">See the Doctor</label>
+          <input class="task__input" type="text">
+          <button class="task__btn task__btn_edit">Edit</button>
+          <button class="task__btn task__btn_delete">
             <img
               class="task__delete-img"
               src="./remove.svg"
